[workspace]
members = ["codegen", "."]

[package]
name = "dynec"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.1.0"
edition = "2021"
documentation = "https://sof3.github.io/dynec/master/dynec"
repository = "https://github.com/SOF3/dynec"
homepage = "https://github.com/SOF3/dynec"
description = "An opinionated ECS-like framework"
license = "Apache-2.0"

[dependencies]
bitvec = "1.0.0"
crossbeam = "0.8.1"
dynec-codegen = {version = "0.1.0", path = "codegen"}
indexmap = "1.8.1"
itertools = "0.10.3"
log = "0.4.16"
num-traits = "0.2.14"
parking_lot = {version = "0.12.0", features = ["owning_ref", "arc_lock", "send_guard"]}
rand = "0.8.5"
rayon = "1.5.2"
replace_with = "0.1.7"
static_assertions = "1.1.0"
xias = "0.3.0"

[features]
default = ["debug-entity-rc"]
debug-entity-rc = [] # Enable entity refcounting in debug mode.
release-entity-rc = [] # Enable entity refcounting in debug mode.

[dev-dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
strum = "0.24.0"
