[workspace]
members = ["codegen", "."]

[package]
name = "dynec"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0-alpha.1"
edition = "2021"
documentation = "https://sof3.github.io/dynec/master/dynec"
repository = "https://github.com/SOF3/dynec"
homepage = "https://github.com/SOF3/dynec"
description = "An opinionated ECS-like framework"
license = "Apache-2.0"

[dependencies]
auto_enums = "0.8.1"
bitvec = "1.0.0"
cfg-if = "1.0.0"
dynec-codegen = {version = "0.2.0-alpha.1", path = "codegen"}
env_logger = {version = "0.10.0", optional = true}
indexmap = "1.8.1"
itertools = "0.10.3"
log = "0.4.16"
parking_lot = {version = "0.12.0", features = ["owning_ref", "arc_lock", "send_guard"]}
rand = "0.8.5"
rayon = "1.5.2"
static_assertions = "1.1.0"
strum = {version = "0.24.0", optional = true}
xias = "0.3.0"
derive-trait = "0.0.1"

[features]
default = ["debug-entity-rc"]
debug-entity-rc = [] # Enable entity refcounting in debug mode.
release-entity-rc = [] # Enable entity refcounting in debug mode.
tuple-impl-32-zip = ["tuple-impl-24-zip"]
tuple-impl-24-zip = ["tuple-impl-16-zip"]
tuple-impl-16-zip = ["tuple-impl-8-zip"]
tuple-impl-8-zip = []
tuple-impl-32-init-fn = ["tuple-impl-24-init-fn"]
tuple-impl-24-init-fn = ["tuple-impl-16-init-fn"]
tuple-impl-16-init-fn = ["tuple-impl-8-init-fn"]
tuple-impl-8-init-fn = []
internal-bench = ["env_logger", "strum"] # Internal feature: enable benchmarking utils.

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
strum = "0.24.0"

[lib]
bench = false

[[bench]]
name = "create_entity"
harness = false

[[bench]]
name = "delete_entity"
harness = false

[[bench]]
name = "iter_entity_add"
harness = false

[profile.bench]
debug = true
