[package]
name = "dynec-codegen"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.2.0-alpha.1"
edition = "2021"
repository = "https://github.com/SOF3/dynec"
homepage = "https://github.com/SOF3/dynec"
description = "dynec codegen library implementation"
license = "AGPL-3.0"

[lib]
proc-macro = true
bench = false

[dependencies]
itertools = "0.10.3"
matches2 = "1.2.1"
proc-macro2 = "1.0.29"
quote = "1.0.8"
syn = {version = "1.0.77", features = ["full"]}
